--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'primeicons/primeicons.css';
+
+:root{
+    --primary: #1900ff;
+}
+
+
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 100vw;
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+.form{
+    background: #ffff;
+    color:#000000;
+}
+
+
+
+
+
